--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -63,6 +63,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/btnSetImage"
         android:layout_width="28dp"
+        android:clickable="true"
         android:layout_height="28dp"
         android:layout_marginEnd="7dp"
         android:layout_marginBottom="7dp"
