--- a/app/src/main/res/layout/item_material_card.xml
+++ b/app/src/main/res/layout/item_material_card.xml
@@ -38,9 +38,8 @@
 
             <ImageView
                 android:id="@+id/imgNext"
-                android:layout_width="9dp"
-                android:layout_height="16dp"
-                android:layout_marginVertical="14dp"
+                android:layout_width="29dp"
+                android:layout_height="36dp"
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/next"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -53,13 +52,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:checked="false"
+                app:thumbTint="@color/white"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 </com.google.android.material.card.MaterialCardView>
